--- a/sourse/pug/pages/layout/js-css.pug
+++ b/sourse/pug/pages/layout/js-css.pug
@@ -24,6 +24,7 @@ mixin allcjs()
 	script(src="libs/inputmask/inputmask.min.js")
 	script(src="libs/ion-rangeslider/js/ion.rangeSlider.min.js")
 	script(src="libs/scrollbooster/scrollbooster.min.js")
+	script(src="libs/hc-sticky/hc-sticky.js")
 	<script src="https://unpkg.com/@popperjs/core@2"></script>
 	<script src="https://unpkg.com/tippy.js@6"></script>
 	script(src="js/common.js")
