--- a/sourse/pug/blocks/sArtical/_sArtical.pug
+++ b/sourse/pug/blocks/sArtical/_sArtical.pug
@@ -54,6 +54,48 @@ mixin sArticalBody()
 								li: a(href="#") FUBAG FPB 52
 								li: a(href="#") Champion AG243
 							+sArticalCItem('Заключение')
+							+sArticalCItem('Популярные модели')
+								li: a(href="#") Huter GGD-52
+								li: a(href="#") Калибр БС-1650
+								li: a(href="#") FUBAG FPB 52
+								li: a(href="#") Champion AG243
+							+sArticalCItem('Заключение')
+							+sArticalCItem('Популярные модели')
+								li: a(href="#") Huter GGD-52
+								li: a(href="#") Калибр БС-1650
+								li: a(href="#") FUBAG FPB 52
+								li: a(href="#") Champion AG243
+							+sArticalCItem('Заключение')
+							+sArticalCItem('Популярные модели')
+								li: a(href="#") Huter GGD-52
+								li: a(href="#") Калибр БС-1650
+								li: a(href="#") FUBAG FPB 52
+								li: a(href="#") Champion AG243
+							+sArticalCItem('Заключение')
+							+sArticalCItem('Популярные модели')
+								li: a(href="#") Huter GGD-52
+								li: a(href="#") Калибр БС-1650
+								li: a(href="#") FUBAG FPB 52
+								li: a(href="#") Champion AG243
+							+sArticalCItem('Заключение')
+							+sArticalCItem('Популярные модели')
+								li: a(href="#") Huter GGD-52
+								li: a(href="#") Калибр БС-1650
+								li: a(href="#") FUBAG FPB 52
+								li: a(href="#") Champion AG243
+							+sArticalCItem('Заключение')
+							+sArticalCItem('Популярные модели')
+								li: a(href="#") Huter GGD-52
+								li: a(href="#") Калибр БС-1650
+								li: a(href="#") FUBAG FPB 52
+								li: a(href="#") Champion AG243
+							+sArticalCItem('Заключение')
+							+sArticalCItem('Популярные модели')
+								li: a(href="#") Huter GGD-52
+								li: a(href="#") Калибр БС-1650
+								li: a(href="#") FUBAG FPB 52
+								li: a(href="#") Champion AG243
+							+sArticalCItem('Заключение')
 				+e.txt-col.col 
 					block
 	// end sArtical
