--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -11,6 +11,10 @@
 	font-size:math.div(10,10)*1rem;
 	width: math.div(14,10)*1em;
 }
+.icon-call {
+	font-size:math.div(48,10)*1rem;
+	width: math.div(48,48)*1em;
+}
 .icon-check {
 	font-size:math.div(17,10)*1rem;
 	width: math.div(17,17)*1em;
@@ -35,6 +39,10 @@
 	font-size:math.div(9,10)*1rem;
 	width: math.div(15,9)*1em;
 }
+.icon-clock {
+	font-size:math.div(48,10)*1rem;
+	width: math.div(48,48)*1em;
+}
 .icon-cross {
 	font-size:math.div(8,10)*1rem;
 	width: math.div(8,8)*1em;
@@ -54,6 +62,10 @@
 .icon-plus {
 	font-size:math.div(16,10)*1rem;
 	width: math.div(16,16)*1em;
+}
+.icon-recycle {
+	font-size:math.div(48,10)*1rem;
+	width: math.div(48,48)*1em;
 }
 .icon-sort-1 {
 	font-size:math.div(18,10)*1rem;
