--- a/sourse/pug/blocks/sConnectionHead/_sConnectionHead.pug
+++ b/sourse/pug/blocks/sConnectionHead/_sConnectionHead.pug
@@ -1,10 +1,8 @@
 mixin sConnectionHead(data)
 	// start sConnectionHead
-	+b.SECTION.sConnectionHead.section#sConnectionHead&attributes(attributes)
-		+e.bg
-			img(loading="lazy" src="img/@2x/сonnectionHead-bg.jpg" alt="")
+	+b.SECTION.sConnectionHead#sConnectionHead&attributes(attributes).bg-wrap
+		+pic('сonnectionHead-bg.jpg', 'bg').picture-bg
 		.container
-			+e.row.row
-				.col
-					h1 Вся техника, представленная в&nbsp;нашем магазине, подключается на&nbsp;готовые коммуникации бесплатно*!
+			+e.inner.section
+				h1 Вся техника, представленная в&nbsp;нашем магазине, подключается на&nbsp;готовые коммуникации бесплатно*!
 	// end sConnectionHead
