--- a/sourse/pug/blocks/sWhatWeDo/_sWhatWeDo.scss
+++ b/sourse/pug/blocks/sWhatWeDo/_sWhatWeDo.scss
@@ -9,28 +9,6 @@
 		--sPT: #{rem(100)};
 		--sPB: #{rem(100)};
 	}
-	&__bg {
-		position: absolute;
-		top: 0;
-		left: 0;
-		height: 1069px;
-		width: 100%;
-		z-index: -1;
-		@include media-breakpoint-up(sm) {
-			height: 1120px;
-		}
-		@include media-breakpoint-up(md) {
-			height: rem(844);
-		}
-		@include media-breakpoint-up(xl) {
-			height: rem(602);
-		}
-		img {
-			height: 100%;
-			object-fit: cover;
-			width: 100%;
-		}
-	}
 	&__text {
 		background-color: $white;
 		padding: rem(30) rem(23) rem(30) rem(30);
@@ -64,6 +42,7 @@
 	}
 	picture {
 		filter: drop-shadow(4px 8px 12px rgba(0, 0, 0, 0.25));
+		height: rem(239);
 		@include media-breakpoint-down(md) {
 			width: 100%;
 			max-width: rem(318);
@@ -71,9 +50,7 @@
 			margin-right: auto;
 		}
 		img {
-			@include media-breakpoint-down(md) {
-				min-height: rem(209);
-			}
+			height: 14.9375rem;
 		}
 	}
 	&__text-wrap {
