--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -59,6 +59,10 @@
 	font-size:math.div(16,10)*1rem;
 	width: math.div(14,16)*1em;
 }
+.icon-phone {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
 .icon-plus {
 	font-size:math.div(16,10)*1rem;
 	width: math.div(16,16)*1em;
@@ -66,6 +70,10 @@
 .icon-recycle {
 	font-size:math.div(48,10)*1rem;
 	width: math.div(48,48)*1em;
+}
+.icon-service {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
 }
 .icon-sort-1 {
 	font-size:math.div(18,10)*1rem;
@@ -86,4 +94,8 @@
 .icon-tool-2 {
 	font-size:math.div(48,10)*1rem;
 	width: math.div(48,48)*1em;
+}
+.icon-zoom {
+	font-size:math.div(25,10)*1rem;
+	width: math.div(25,25)*1em;
 }
