--- a/sourse/pug/blocks/sServiceCenterHead/_sServiceCenterHead.scss
+++ b/sourse/pug/blocks/sServiceCenterHead/_sServiceCenterHead.scss
@@ -31,6 +31,95 @@
 			bottom: 0;
 			left: 0;
 			z-index: -1;
+			@include media-breakpoint-down(sm) {
+				height: 162px;
+			}
+		}
+	}
+	.form-wrap {
+		position: relative;
+		max-width: rem(455);
+		margin-bottom: rem(30);
+		width: 100%;
+		input {
+			border-radius: rem(100);
+			background-color: $gray-910;
+		}
+		button {
+			position: absolute;
+			top: 50%;
+			right: 15px;
+			transform: translateY(-50%);
+			background-color: transparent;
+			border: none;
+		}
+		.icon {
+			color: $orange;
+			fill: none;
+			stroke: $orange;
+			font-size: rem(23);
+		}
+	}
+	&__container {
+		display: flex;
+		@include media-breakpoint-down(sm) {
+			flex-direction: column;
+		}
+	}
+	.dropdown {
+		position: relative;
+		margin-right: rem(40);
+		width: 100%;
+		max-width: rem(230);
+		@include media-breakpoint-down(sm) {
+			margin-bottom: rem(20);
+		}
+	}
+	&__btn {
+		padding: rem(12.5) 0;
+		background-color: $gray-910;
+		border-radius: rem(100);
+		border: none;
+		color: #EBEBEB;
+		font-size: rem(17);
+		font-weight: 700;
+		width: 100%;
+		z-index: 3;
+    position: relative;
+		.icon {
+			font-size: rem(6.4);
+			color: $orange;
+			margin-left: rem(42);
+		}
+	}
+	.dropdown-menu {
+		display: none;
+		flex-direction: column;
+		position: absolute;
+		background-color: $white;
+		padding-top: rem(55);
+		padding-bottom: rem(20);
+		padding-left: rem(40);
+		padding-right: rem(20);
+		width: 100%;
+		top: rem(25);
+		left: 0;
+		z-index: 2;
+		&.active {
+			display: flex;
+		}
+	}
+	.dropdown-item {
+		@include mt;
+		text-decoration: none;
+		color: $body-color;
+		font-size: rem(17);
+		font-weight: 600;
+		&:hover {
+			color: $orange;
+		}
+		&:not(:last-child) {
+			margin-bottom: rem(10);
 		}
 	}
 	@include media-breakpoint-up(xl) {}
