edit 024-contact-information and svg

--- a/sourse/pug/blocks/sServicesList/_sServicesList.scss
+++ b/sourse/pug/blocks/sServicesList/_sServicesList.scss
@@ -52,6 +52,8 @@
 			margin-bottom: rem(40);
 		}
 		.icon {
+			border: solid 1px #C9C9C9;
+    	border-radius: 50%;
 			position: absolute;
 			font-size: rem(24);
 			top: 0;
