--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -59,6 +59,10 @@
 	font-size:math.div(16,10)*1rem;
 	width: math.div(14,16)*1em;
 }
+.icon-parking {
+	font-size:math.div(48,10)*1rem;
+	width: math.div(48,48)*1em;
+}
 .icon-phone {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
