--- a/sourse/pug/blocks/sBrends/_sBrends.scss
+++ b/sourse/pug/blocks/sBrends/_sBrends.scss
@@ -21,9 +21,9 @@
 				overflow: visible!important;
 			}
 		}
-		.swiper-wrapper{
+		// .swiper-wrapper{
 
-		}
+		// }
 		.swiper-slide{
 			width: rem(180);
 			@include media-breakpoint-up(md){
@@ -93,6 +93,6 @@
 	}
 
 	//
-	&__{}
-	&__{}
+	// &__{}
+	// &__{}
 } // end.sBrends
