done 025-equipment-storage

--- a/sourse/pug/blocks/sServiceCenterHead/_sServiceCenterHead.pug
+++ b/sourse/pug/blocks/sServiceCenterHead/_sServiceCenterHead.pug
@@ -1,6 +1,6 @@
 mixin sServiceCenterHead(data)
 	// start sServiceCenterHead
-	+b.SECTION.sServiceCenterHead#sServiceCenterHead&attributes(attributes).bg-wrap
+	+b.sServiceCenterHead#sServiceCenterHead&attributes(attributes).bg-wrap
 		+pic('service-center-bg.jpg', 'bg').picture-bg
 		+e.inner.section
 			+e.container.container
