--- a/sourse/pug/blocks/sServicesList/_sServicesList.pug
+++ b/sourse/pug/blocks/sServicesList/_sServicesList.pug
@@ -14,7 +14,7 @@
 
 mixin sServicesList(data)
 	// start sServicesList
-	+b.SECTION.sServicesList.section#sServicesList&attributes(attributes).bg-wrap
+	+b.sServicesList.section#sServicesList&attributes(attributes).bg-wrap
 		+pic('sWhatWeDo-bg.jpg', 'bg').picture-bg
 		.container
 			.row
