--- a/sourse/pug/blocks/sParkingMap/_sParkingMap.pug
+++ b/sourse/pug/blocks/sParkingMap/_sParkingMap.pug
@@ -4,7 +4,7 @@ mixin sParkingMap(data)
 		+e.map
 			#map()
 			//- <div id="map"style="width:100%; height:360px"></div>
-			<script src="https://api-maps.yandex.ru/2.0/?load=package.standard,package.geoObjects&amp;lang=ru-RU&amp;apikey="></script>
+			<script src="https://api-maps.yandex.ru/2.0/?load=package.standard,package.geoObjects&amp;lang=ru-RU&amp;apikey=2066e304-cee0-4ed2-9cb2-5f6521d5f96c"></script>
 			script.
 				const map = document.querySelector('#map');
 
@@ -12,7 +12,44 @@ mixin sParkingMap(data)
 
 				function init () {
 					//- var center = [55.75322550427434,37.65589449999999];
-					var center = [55.7529781840114,37.65581269262505];
+					var center = [55.803299806784906,37.59322146673064];
+					var myCircle = new ymaps.Circle([
+						// Координаты центра круга.
+						[55.803299806784906,37.59322146673064],
+						// Радиус круга в метрах.
+						100
+					], {
+						// Задаем опции круга.
+						// Включаем возможность перетаскивания круга.
+						draggable: true,
+						// Цвет заливки.
+						// Последний байт (77) определяет прозрачность.
+						// Прозрачность заливки также можно задать используя опцию "fillOpacity".
+						fillColor: "#DB709377",
+						// Цвет обводки.
+						strokeColor: "#990066",
+						// Прозрачность обводки.
+						strokeOpacity: 0.8,
+						// Ширина обводки в пикселях.
+						strokeWidth: 5
+					});
+					//- var myCircle2 = new ymaps.Circle([
+					//- 	// Координаты центра круга.
+					//- 	[55.803299806784906,37.59322146673064],
+					//- 	// Радиус круга в метрах.
+					//- 	10
+					//- ], {
+					//- 	// Задаем опции круга.
+					//- 	// Включаем возможность перетаскивания круга.
+					//- 	draggable: false,
+					//- 	// Цвет заливки.
+					//- 	// Последний байт (77) определяет прозрачность.
+					//- 	// Прозрачность заливки также можно задать используя опцию "fillOpacity".
+					//- 	fillColor: "#FF8651",
+					//- 	fillOpacity: '1',
+					//- 	strokeWidth: 0
+					//- });
+					// Добавляем круг на карту.
 					var myMap = new ymaps.Map("map", {
 									center: center,
 									zoom: 17
@@ -32,42 +69,9 @@ mixin sParkingMap(data)
 									//- iconImageOffset: [-74, -76]
 									//- [-38, -76]
 							});
-					myMap.behaviors.disable('scrollZoom');
-					var myCircle = new ymaps.Circle([
-						// Координаты центра круга.
-						[55.7529781840114,37.65581269262505],
-						// Радиус круга в метрах.
-						100
-					], {
-						// Задаем опции круга.
-						// Включаем возможность перетаскивания круга.
-						draggable: false,
-						// Цвет заливки.
-						// Последний байт (77) определяет прозрачность.
-						// Прозрачность заливки также можно задать используя опцию "fillOpacity".
-						fillColor: "#FF865130",
-						//- fillOpacity: '0.3',
-						strokeWidth: 0
-					});
-					var myCircle2 = new ymaps.Circle([
-						// Координаты центра круга.
-						[55.7529781840114,37.65581269262505],
-						// Радиус круга в метрах.
-						10
-					], {
-						// Задаем опции круга.
-						// Включаем возможность перетаскивания круга.
-						draggable: false,
-						// Цвет заливки.
-						// Последний байт (77) определяет прозрачность.
-						// Прозрачность заливки также можно задать используя опцию "fillOpacity".
-						fillColor: "#FF8651",
-						//- fillOpacity: '0.3',
-						strokeWidth: 0
-					});
-					// Добавляем круг на карту.
 					myMap.geoObjects.add(myCircle);
-					myMap.geoObjects.add(myCircle2);
+					//- myMap.geoObjects.add(myCircle2);
+					myMap.behaviors.disable('scrollZoom');
 					//на мобильных устройствах... (проверяем по userAgent браузера)
 					if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)){
 					//... отключаем перетаскивание карты
