--- a/sourse/pug/blocks/sServiceCenterHead/_sServiceCenterHead.scss
+++ b/sourse/pug/blocks/sServiceCenterHead/_sServiceCenterHead.scss
@@ -101,6 +101,8 @@
 		padding-bottom: rem(20);
 		padding-left: rem(40);
 		padding-right: rem(20);
+		box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
+		border-radius: 0 0 25px 25px;
 		width: 100%;
 		top: rem(25);
 		left: 0;
