--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -13,6 +13,13 @@ mixin mob-mnu()
 			//-+b.location
 				+icon('location')
 				span null
+			+e.workTime
+				span Время работы
+				+icon('dots')
+				+e.workTime-content
+					+icon('alert')
+					span Ежедневно: с 10 до 21
+					p c 31 декабря по 2 января магазин не работает
 			+e.address.mb-4 ул.Складочная д.1, стр.9
 			//+topNavSearch('mb-4')
 			+e.tel(href="#") 8 (800) 775-82-72
