--- a/sourse/pug/blocks/topLine/_topLine.pug
+++ b/sourse/pug/blocks/topLine/_topLine.pug
@@ -7,6 +7,14 @@ mixin topLine()
 					+location()
 				.col.d-none.d-xl-block
 					+mnu()
+				.col-auto.d-none.d-xl-block
+					+e.workTime
+						span Время работы
+						+icon('dots')
+						+e.workTime-content
+							+icon('alert')
+							span Ежедневно: с 10 до 21
+							p c 31 декабря по 2 января магазин не работает
 				.col-auto
 					+e.address ул.Складочная д.1, стр.9
 				.col-auto.d-none.d-xxl-block
