--- a/sourse/pug/pages/024-contact-information.pug
+++ b/sourse/pug/pages/024-contact-information.pug
@@ -11,6 +11,7 @@ extends layout/main.pug
 //- include ../blocks/sGForm/_sGForm.pug
 //- include ../blocks/sBrends/_sBrends.pug
 //- include ../blocks/sTags/_sTags.pug
+include ../blocks/sContactInfo/_sContactInfo.pug
 include ../blocks/sForm/_sForm.pug
 include ../blocks/sParking/_sParking.pug
 include ../blocks/sParkingMap/_sParkingMap.pug
@@ -32,6 +33,7 @@ block pagecontent
 		.container
 			+breadcrumb('Главная', 'О магазине', 'Контакты')
 			h2 Контактная информация
+	+sContactInfo()
 	+sParking()
 	+sForm()
 	+sParkingMap()
