--- a/sourse/pug/blocks/sTermsOfSale/_sTermsOfSale.scss
+++ b/sourse/pug/blocks/sTermsOfSale/_sTermsOfSale.scss
@@ -1,14 +1,79 @@
 // start .sTermsOfSale
 .sTermsOfSale {
-		// --sPT: ;
-		// --sPB: ;
-		// --sTPB: ;
-
-	@include media-breakpoint-up(xl) {}
-	@include media-breakpoint-up(lg) {}
-	@include media-breakpoint-up(md) {}
-	@include media-breakpoint-up(sm) {}
-	@include media-breakpoint-between(md, xl) {}
-	@include media-breakpoint-only(xl) {}
-	@include media-breakpoint-down(xl) {}
+	// --sPT: ;
+	// --sPB: ;
+	// --sTPB: ;
+	&__definitions {
+		margin-bottom: var(--sPT);
+		.row {
+			--bs-gutter-x: #{rem(20)};
+			--bs-gutter-y: var(--bs-gutter-x);
+			@include media-breakpoint-up(xl) {
+				--bs-gutter-x: #{rem(30)};
+			}
+		}
+		& > picture {
+			height: calc(100% + #{rem(200)});
+			top: calc(#{rem(20)} - var(--sPT));
+			@include media-breakpoint-up(xl) {
+				top: calc(#{rem(30)} - var(--sPT));
+			}
+		}
+	}
+	&__definition {
+		display: flex;
+		flex-direction: column;
+		height: 100%;
+		line-height: calc(22 / 16);
+		background-color: $white;
+		padding: rem(25);
+		border: 1px solid #e6e6e6;
+		@include media-breakpoint-up(sm) {
+			padding: rem(30);
+		}
+		@include media-breakpoint-up(md) {
+			padding: 6.93%;
+		}
+		
+		h3 {
+			margin-bottom: rem(10);
+			font-weight: 600;
+			line-height: calc(25 / 20);
+		}
+		p {
+			flex-grow: 1;
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+		a {
+			display: inline-block;
+			font-weight: 600;
+			font-size: rem(14);
+			@include media-breakpoint-up(md) {
+				font-size: rem(16);
+			}
+			&:not(:hover) {
+				text-decoration: none;
+			}
+		}
+	}
+	&__regulations {
+		position: relative;
+		z-index: 2;
+	}
+	@include media-breakpoint-up(xl) {
+	}
+	@include media-breakpoint-up(lg) {
+	}
+	@include media-breakpoint-up(md) {
+	}
+	@include media-breakpoint-up(sm) {
+	}
+	@include media-breakpoint-between(md, xl) {
+	}
+	@include media-breakpoint-only(xl) {
+	}
+	@include media-breakpoint-down(xl) {
+	}
 } // end.sTermsOfSale
