--- a/sourse/pug/blocks/sTermsOfSale/_sTermsOfSale.pug
+++ b/sourse/pug/blocks/sTermsOfSale/_sTermsOfSale.pug
@@ -31,9 +31,24 @@ mixin sTermsOfSale(data)
 						p Сайт в&nbsp;глобальной сети Интернет, ссылка на&nbsp;который размещена на&nbsp;сайте #[a(href="#") kitchenmania.ru].
 		+e.regulations
 			.container
-				.text-secondary
-					p Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!
-					p Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!
-					p Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!
-					p Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!
+				.dropdown 
+					+e.BUTTON.btn.dropdown__btn Все бренды
+						+icon('chevron-down')
+					.dropdown-menu.dropdown__content
+						p Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!
+						p Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!
+				.dropdown 
+					+e.BUTTON.btn.dropdown__btn Все бренды
+						+icon('chevron-down')
+					.dropdown-menu.dropdown__content
+						p Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!
+						p Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!
+				.dropdown 
+					+e.BUTTON.btn.dropdown__btn Все бренды
+						+icon('chevron-down')
+					.dropdown-menu.dropdown__content
+						p Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!
+						p Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!
+					
+
 	// end sTermsOfSale
