--- a/sourse/pug/blocks/sTermsOfSale/_sTermsOfSale.scss
+++ b/sourse/pug/blocks/sTermsOfSale/_sTermsOfSale.scss
@@ -62,6 +62,9 @@
 		position: relative;
 		z-index: 2;
 	}
+	.dropdown__content {
+		display: none;
+	}
 	@include media-breakpoint-up(xl) {
 	}
 	@include media-breakpoint-up(lg) {
