sTermsOfSale section done

--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -55,6 +55,10 @@
 	font-size:math.div(16,10)*1rem;
 	width: math.div(16,16)*1em;
 }
+.icon-drop-arrow {
+	font-size:math.div(32,10)*1rem;
+	width: math.div(32,32)*1em;
+}
 .icon-fb {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
