--- a/sourse/pug/blocks/sTermsOfSale/_sTermsOfSale.pug
+++ b/sourse/pug/blocks/sTermsOfSale/_sTermsOfSale.pug
@@ -29,26 +29,80 @@ mixin sTermsOfSale(data)
 						p Третье лицо, оказывающее по&nbsp;договору с&nbsp;Продавцом услуги по&nbsp;доставке Заказов Клиентам.
 					+definition(`Интернет-магазин`)
 						p Сайт в&nbsp;глобальной сети Интернет, ссылка на&nbsp;который размещена на&nbsp;сайте #[a(href="#") kitchenmania.ru].
-		+e.regulations
-			.container
-				.dropdown 
-					+e.BUTTON.btn.dropdown__btn Все бренды
-						+icon('chevron-down')
-					.dropdown-menu.dropdown__content
-						p Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!
-						p Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!
-				.dropdown 
-					+e.BUTTON.btn.dropdown__btn Все бренды
-						+icon('chevron-down')
-					.dropdown-menu.dropdown__content
-						p Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!
-						p Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!
-				.dropdown 
-					+e.BUTTON.btn.dropdown__btn Все бренды
-						+icon('chevron-down')
-					.dropdown-menu.dropdown__content
-						p Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!
-						p Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!
-					
+		.container
+			+e.regulations
+				mixin dropdown(c, h)
+					+b.dropdown
+						+e.btn 
+							h2!= h
+								span!=c
+							+icon('drop-arrow')
+						+e.content
+							block
+				+dropdown(`1.`, `Общие положения`)
+					ul
+						li
+							span 1.1.
+							p Сайт принадлежит и&nbsp;администрируется Продавцом.
+						li
+							span 1.2.
+							p Заказывая товары через Интернет-магазин, Клиент соглашается с&nbsp;Условиями продажи товаров (далее&nbsp;&mdash; Условия), изложенными ниже.
+						li
+							span 1.3.
+							p Настоящие Условия являются публичной офертой в&nbsp;соответствии со&nbsp;ст.435 и&nbsp;ч.2 ст.437&nbsp;ГК РФ.
+						li
+							span 1.4.
+							p К&nbsp;отношениям между Клиентом и&nbsp;Продавцом применяются положения ГК&nbsp;РФ&nbsp;о&nbsp;розничной купле-продаже (&sect;&nbsp;2&nbsp;глава&nbsp;30), а&nbsp;также Закон РФ&nbsp;&laquo;О&nbsp;защите прав потребителей&raquo; от&nbsp;07.02.1992 &#8470;&nbsp;2300-1 и&nbsp;иные правовые акты, принятые в&nbsp;соответствии с&nbsp;ними.
+						li
+							span 1.5.
+							p Продавец оставляет за&nbsp;собой право вносить изменения в&nbsp;настоящие Условия, в&nbsp;связи с&nbsp;чем, Клиент обязуется отслеживать изменения в&nbsp;Условиях.
+						li
+							span 1.6.
+							p Клиент соглашается с&nbsp;Условиями нажатием кнопки &laquo;Оформить заказ&raquo; на&nbsp;этапе оформления Заказа на&nbsp;Сайте.
+				+dropdown(`2.`, `Регистрация на&nbsp;Сайте`)
+					ul
+						li
+							span 2.1.
+							p Сайт принадлежит и&nbsp;администрируется Продавцом.
+						li
+							span 2.2.
+							p Заказывая товары через Интернет-магазин, Клиент соглашается с&nbsp;Условиями продажи товаров (далее&nbsp;&mdash; Условия), изложенными ниже.
+						li
+							span 2.3.
+							p Настоящие Условия являются публичной офертой в&nbsp;соответствии со&nbsp;ст.435 и&nbsp;ч.2 ст.437&nbsp;ГК РФ.
+						li
+							span 2.4.
+							p К&nbsp;отношениям между Клиентом и&nbsp;Продавцом применяются положения ГК&nbsp;РФ&nbsp;о&nbsp;розничной купле-продаже (&sect;&nbsp;2&nbsp;глава&nbsp;30), а&nbsp;также Закон РФ&nbsp;&laquo;О&nbsp;защите прав потребителей&raquo; от&nbsp;07.02.1992 &#8470;&nbsp;2300-1 и&nbsp;иные правовые акты, принятые в&nbsp;соответствии с&nbsp;ними.
+						li
+							span 2.5.
+							p Продавец оставляет за&nbsp;собой право вносить изменения в&nbsp;настоящие Условия, в&nbsp;связи с&nbsp;чем, Клиент обязуется отслеживать изменения в&nbsp;Условиях.
+						li
+							span 2.6.
+							p Клиент соглашается с&nbsp;Условиями нажатием кнопки &laquo;Оформить заказ&raquo; на&nbsp;этапе оформления Заказа на&nbsp;Сайте.
+				+dropdown(`3.`, `Оформление и&nbsp;сроки выполнения Заказа`)
+					ul
+						li
+							span 3.1.
+							p Заказ Клиента может быть оформлен следующими способами: принят по&nbsp;телефону или оформлен Клиентом самостоятельно на&nbsp;Сайте. Подробности оформления Заказа описаны в&nbsp;разделе Доставка и&nbsp;оплата
+						li
+							span 3.2.
+							ul
+								li
+									p При оформлении Заказа Клиент должен указать следующую информацию:
+								li полностью Ф.И.О. Клиента либо Получателя Заказа;
+								li адрес доставки Заказа;
+								li контактный телефон.
+						li
+							span 3.3.
+							p После оформления заказа Клиенту предоставляется информация об&nbsp;ожидаемой дате передачи Заказа в&nbsp;Службу доставки. Эта дата означает срок, в&nbsp;который Продавец обязуется передать Заказ Клиента в&nbsp;выбранную им&nbsp;при оформлении Заказа Службу доставки. Указанная дата зависит от&nbsp;наличия заказанных Товаров на&nbsp;складе Продавца и&nbsp;времени, необходимого на&nbsp;обработку Заказа.
+						li
+							span 3.10.
+							p.strong Оформление Предзаказа
+						li
+							span 3.10.1.
+							p Продавцом на&nbsp;Сайте могут быть предложены к&nbsp;оформлению предварительных заказов товары, еще не&nbsp;поступившие в&nbsp;продажу и&nbsp;не&nbsp;находящиеся на&nbsp;складе Продавца. Указанный товар оформляется в&nbsp;отдельный заказ (далее&nbsp;&mdash; Предзаказ).
+						li
+							span 3.10.2.1.
+							p Продавцом на&nbsp;Сайте могут быть предложены к&nbsp;оформлению предварительных заказов товары, еще не&nbsp;поступившие в&nbsp;продажу и&nbsp;не&nbsp;находящиеся на&nbsp;складе Продавца. Указанный товар оформляется в&nbsp;отдельный заказ (далее&nbsp;&mdash; Предзаказ).
 
 	// end sTermsOfSale
