--- a/sourse/pug/blocks/sParkingMap/_sParkingMap.pug
+++ b/sourse/pug/blocks/sParkingMap/_sParkingMap.pug
@@ -2,7 +2,7 @@ mixin sParkingMap(data)
 	// start sParkingMap
 	+b.sParkingMap.section#sParkingMap&attributes(attributes)
 		+e.map
-			#map()
+			#map(data-mark="img/svg/circle-map.svg")
 			//- <div id="map"style="width:100%; height:360px"></div>
 			<script src="https://api-maps.yandex.ru/2.0/?load=package.standard,package.geoObjects&amp;lang=ru-RU&amp;apikey=2066e304-cee0-4ed2-9cb2-5f6521d5f96c"></script>
 			script.
@@ -13,43 +13,6 @@ mixin sParkingMap(data)
 				function init () {
 					//- var center = [55.75322550427434,37.65589449999999];
 					var center = [55.803299806784906,37.59322146673064];
-					var myCircle = new ymaps.Circle([
-						// Координаты центра круга.
-						[55.803299806784906,37.59322146673064],
-						// Радиус круга в метрах.
-						100
-					], {
-						// Задаем опции круга.
-						// Включаем возможность перетаскивания круга.
-						draggable: true,
-						// Цвет заливки.
-						// Последний байт (77) определяет прозрачность.
-						// Прозрачность заливки также можно задать используя опцию "fillOpacity".
-						fillColor: "#DB709377",
-						// Цвет обводки.
-						strokeColor: "#990066",
-						// Прозрачность обводки.
-						strokeOpacity: 0.8,
-						// Ширина обводки в пикселях.
-						strokeWidth: 5
-					});
-					//- var myCircle2 = new ymaps.Circle([
-					//- 	// Координаты центра круга.
-					//- 	[55.803299806784906,37.59322146673064],
-					//- 	// Радиус круга в метрах.
-					//- 	10
-					//- ], {
-					//- 	// Задаем опции круга.
-					//- 	// Включаем возможность перетаскивания круга.
-					//- 	draggable: false,
-					//- 	// Цвет заливки.
-					//- 	// Последний байт (77) определяет прозрачность.
-					//- 	// Прозрачность заливки также можно задать используя опцию "fillOpacity".
-					//- 	fillColor: "#FF8651",
-					//- 	fillOpacity: '1',
-					//- 	strokeWidth: 0
-					//- });
-					// Добавляем круг на карту.
 					var myMap = new ymaps.Map("map", {
 									center: center,
 									zoom: 17
@@ -60,17 +23,15 @@ mixin sParkingMap(data)
 							}, {
 									// Опции.
 									// Своё изображение иконки метки.
-									//- iconImageHref: map.dataset.mark,
+									iconImageHref: map.dataset.mark,
 									//- iconImageHref: 'img/svg/map-marker.svg',
 									// Размеры метки.
-									//- iconImageSize: [76, 76],
+									iconImageSize: [223, 223],
 									// Смещение левого верхнего угла иконки относительно
 									// её "ножки" (точки привязки).
-									//- iconImageOffset: [-74, -76]
+									iconImageOffset: [-111, -111]
 									//- [-38, -76]
 							});
-					myMap.geoObjects.add(myCircle);
-					//- myMap.geoObjects.add(myCircle2);
 					myMap.behaviors.disable('scrollZoom');
 					//на мобильных устройствах... (проверяем по userAgent браузера)
 					if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)){
@@ -78,7 +39,7 @@ mixin sParkingMap(data)
 						myMap.behaviors.disable('drag');
 					}
 					// Добавляем все метки на карту.
-					//- myMap.geoObjects
-					//- 	.add(myPlacemark2)
+					myMap.geoObjects
+						.add(myPlacemark2)
 				}
 	// end sParkingMap
