--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -47,6 +47,10 @@
 	font-size:math.div(48,10)*1rem;
 	width: math.div(48,48)*1em;
 }
+.icon-contact-info-arrow {
+	font-size:math.div(8,10)*1rem;
+	width: math.div(30,8)*1em;
+}
 .icon-cross {
 	font-size:math.div(8,10)*1rem;
 	width: math.div(8,8)*1em;
@@ -55,9 +59,17 @@
 	font-size:math.div(16,10)*1rem;
 	width: math.div(16,16)*1em;
 }
+.icon-download {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(25,24)*1em;
+}
 .icon-fb {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
+}
+.icon-info {
+	font-size:math.div(48,10)*1rem;
+	width: math.div(48,48)*1em;
 }
 .icon-inst {
 	font-size:math.div(24,10)*1rem;
@@ -66,6 +78,10 @@
 .icon-location {
 	font-size:math.div(16,10)*1rem;
 	width: math.div(14,16)*1em;
+}
+.icon-marker {
+	font-size:math.div(48,10)*1rem;
+	width: math.div(48,48)*1em;
 }
 .icon-parking {
 	font-size:math.div(48,10)*1rem;
