--- a/sourse/pug/blocks/sTermsOfSale/_sTermsOfSale.pug
+++ b/sourse/pug/blocks/sTermsOfSale/_sTermsOfSale.pug
@@ -97,7 +97,7 @@ mixin sTermsOfSale(data)
 							p После оформления заказа Клиенту предоставляется информация об&nbsp;ожидаемой дате передачи Заказа в&nbsp;Службу доставки. Эта дата означает срок, в&nbsp;который Продавец обязуется передать Заказ Клиента в&nbsp;выбранную им&nbsp;при оформлении Заказа Службу доставки. Указанная дата зависит от&nbsp;наличия заказанных Товаров на&nbsp;складе Продавца и&nbsp;времени, необходимого на&nbsp;обработку Заказа.
 						li
 							span 3.10.
-							p.strong Оформление Предзаказа
+							p.fw-600 Оформление Предзаказа
 						li
 							span 3.10.1.
 							p Продавцом на&nbsp;Сайте могут быть предложены к&nbsp;оформлению предварительных заказов товары, еще не&nbsp;поступившие в&nbsp;продажу и&nbsp;не&nbsp;находящиеся на&nbsp;складе Продавца. Указанный товар оформляется в&nbsp;отдельный заказ (далее&nbsp;&mdash; Предзаказ).
