--- a/sourse/pug/blocks/sTermsOfSale/_sTermsOfSale.scss
+++ b/sourse/pug/blocks/sTermsOfSale/_sTermsOfSale.scss
@@ -162,9 +162,9 @@
 						&:last-child {
 							margin-bottom: 0;
 						}
-						&.strong {
-							font-weight: 600;
-						}
+						// &.strong {
+						// 	font-weight: 600;
+						// }
 					}
 					ul {
 						list-style: none;
