--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -11,6 +11,10 @@
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
+.icon-arrow-down {
+	font-size:math.div(36,10)*1rem;
+	width: math.div(36,36)*1em;
+}
 .icon-arrow-r {
 	font-size:math.div(10,10)*1rem;
 	width: math.div(14,10)*1em;
@@ -47,6 +51,10 @@
 	font-size:math.div(48,10)*1rem;
 	width: math.div(48,48)*1em;
 }
+.icon-community {
+	font-size:math.div(36,10)*1rem;
+	width: math.div(36,36)*1em;
+}
 .icon-contact-info-arrow {
 	font-size:math.div(8,10)*1rem;
 	width: math.div(30,8)*1em;
@@ -70,6 +78,10 @@
 .icon-fb {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
+}
+.icon-growth {
+	font-size:math.div(36,10)*1rem;
+	width: math.div(36,36)*1em;
 }
 .icon-info {
 	font-size:math.div(48,10)*1rem;
@@ -98,6 +110,10 @@
 .icon-plus {
 	font-size:math.div(16,10)*1rem;
 	width: math.div(16,16)*1em;
+}
+.icon-privilege {
+	font-size:math.div(36,10)*1rem;
+	width: math.div(36,36)*1em;
 }
 .icon-recycle {
 	font-size:math.div(48,10)*1rem;
