--- a/sourse/pug/blocks/sForm/_sForm.scss
+++ b/sourse/pug/blocks/sForm/_sForm.scss
@@ -202,7 +202,7 @@
 				&--main {
 					margin-bottom: calc(var(--bs-gutter-y) * 1.333);
 					@include media-breakpoint-up(xl) {
-					margin-bottom: calc(var(--bs-gutter-y) * 2.333);
+						margin-bottom: calc(var(--bs-gutter-y) * 2.333);
 					}
 				}
 				&--footer {
@@ -215,22 +215,22 @@
 					height: inherit;
 				}
 				textarea {
-					height: 100%;
-					min-height: rem(140);
+					@include media-breakpoint-up(lg) {
+						height: 100%;
+					}
+					// min-height: rem(140);
 				}
 			}
 			&__btn,
 			.btn-upload {
-				width: 343px;
-				max-width: 100%;
-			}
-			
-			&__policy {
-				justify-content: center;
-				text-align: left;
-				@include media-breakpoint-up(sm) {
-					justify-content: flex-start;
+				@include media-breakpoint-up(md) {
+					width: 343px;
+					max-width: 100%;
 				}
+			}
+
+			&__policy {
+				text-align: left;
 			}
 		}
 	}
@@ -241,7 +241,7 @@
 	display: inline-block !important;
 	border: 1px solid;
 	text-transform: uppercase;
-	padding: rem(13.5) rem(18);	
+	padding: rem(13.5) rem(18);
 	input {
 		@extend .invisible;
 	}
