--- a/sourse/pug/blocks/sGuarantee/_sGuarantee.pug
+++ b/sourse/pug/blocks/sGuarantee/_sGuarantee.pug
@@ -16,4 +16,21 @@ mixin sGuarantee(data)
 						li Срок рассмотрения заявления&nbsp;&mdash; 10&nbsp;дней. В&nbsp;этот срок принимается решение о&nbsp;возврате или сокращении денежных средств, обмене либо ремонте товара;
 						li Вы&nbsp;можете потребовать незамедлительного устранения дефекта. Если это невозможно, срок ремонта не&nbsp;должен превышать 45&nbsp;дней;
 						li Срок обмена товара на&nbsp;другой аналогичный&nbsp;&mdash; 7&nbsp;дней, при необходимости дополнительной проверки качества&nbsp;&mdash; 20&nbsp;дней (срок продлевается до&nbsp;30&nbsp;дней в&nbsp;случае отсутствия товара на&nbsp;складе).
+				+b.warning-message
+					+e.img-wrap
+						img(src="img/svg/icon-question.svg", alt="")
+					+e.content
+						h3 Если у&nbsp;вас остались вопросы:
+						.row
+							.col.col-sm-auto
+								+e.title Звоните
+								+e.tel(href="tel:+78005058293") Россия +7 (800) 505-82-93
+								+e.tel(href="tel:+74951548137") Москва +7 (495) 154-81-37
+							.col.col-sm-auto
+								+e.title Пишите
+								+e.mail(href="mailto:shop@kitchenmania.ru") shop@kitchenmania.ru
+
+
+
+
 	// end sGuarantee
