--- a/sourse/pug/blocks/sGuarantee/_sGuarantee.pug
+++ b/sourse/pug/blocks/sGuarantee/_sGuarantee.pug
@@ -16,7 +16,7 @@ mixin sGuarantee(data)
 						li Срок рассмотрения заявления&nbsp;&mdash; 10&nbsp;дней. В&nbsp;этот срок принимается решение о&nbsp;возврате или сокращении денежных средств, обмене либо ремонте товара;
 						li Вы&nbsp;можете потребовать незамедлительного устранения дефекта. Если это невозможно, срок ремонта не&nbsp;должен превышать 45&nbsp;дней;
 						li Срок обмена товара на&nbsp;другой аналогичный&nbsp;&mdash; 7&nbsp;дней, при необходимости дополнительной проверки качества&nbsp;&mdash; 20&nbsp;дней (срок продлевается до&nbsp;30&nbsp;дней в&nbsp;случае отсутствия товара на&nbsp;складе).
-				+b.warning-message
+				+b.info-message
 					+e.img-wrap
 						img(src="img/svg/icon-question.svg", alt="")
 					+e.content
