--- a/sourse/pug/blocks/sGuarantee/_sGuarantee.scss
+++ b/sourse/pug/blocks/sGuarantee/_sGuarantee.scss
@@ -111,7 +111,7 @@
 	}
 } // end.sGuarantee
 
-.warning-message {
+.info-message {
 	--imgWidth: #{rem(70)};
 	display: flex;
 	flex-direction: column;
