--- a/sourse/pug/blocks/sWhatWeDo/_sWhatWeDo.pug
+++ b/sourse/pug/blocks/sWhatWeDo/_sWhatWeDo.pug
@@ -9,7 +9,7 @@ mixin whatWeDoCard(img, text, svg)
 mixin sWhatWeDo(data)
 	// start sWhatWeDo
 	+b.sWhatWeDo.section#sWhatWeDo&attributes(attributes).bg-wrap
-		+pic('sWhatWeDo-bg.jpg', 'bg').picture-bg
+		+pic('dark-bg.jpg.jpg', 'bg').picture-bg
 		.container
 			.row
 				.col-12.col-md-6.col-xl-4
