--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -19,6 +19,10 @@
 	font-size:math.div(10,10)*1rem;
 	width: math.div(14,10)*1em;
 }
+.icon-attention {
+	font-size:math.div(36,10)*1rem;
+	width: math.div(36,36)*1em;
+}
 .icon-call {
 	font-size:math.div(48,10)*1rem;
 	width: math.div(48,48)*1em;
@@ -66,6 +70,10 @@
 .icon-dots {
 	font-size:math.div(16,10)*1rem;
 	width: math.div(16,16)*1em;
+}
+.icon-down-scroll {
+	font-size:math.div(56,10)*1rem;
+	width: math.div(56,56)*1em;
 }
 .icon-download {
 	font-size:math.div(24,10)*1rem;
@@ -140,6 +148,10 @@
 	width: math.div(48,48)*1em;
 }
 .icon-tool-2 {
+	font-size:math.div(48,10)*1rem;
+	width: math.div(48,48)*1em;
+}
+.icon-web {
 	font-size:math.div(48,10)*1rem;
 	width: math.div(48,48)*1em;
 }
